-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.7.0 FF
-
None
-
3e3f6b44e (dev)
C:\Users\qt\work\qt\qtmultimedia\src\plugins\multimedia\ffmpeg\qffmpegscreencapture_dxgi.cpp(288): error C2039: 'QWindowsScreen': is not a member of 'QNativeInterface::Private' C:\Users\qt\work\install\include\QtGui\6.7.0\QtGui\qpa/qplatformscreen_p.h(35): note: see declaration of 'QNativeInterface::Private' C:\Users\qt\work\qt\qtmultimedia\src\plugins\multimedia\ffmpeg\qffmpegscreencapture_dxgi.cpp(288): error C2065: 'QWindowsScreen': undeclared identifier C:\Users\qt\work\qt\qtmultimedia\src\plugins\multimedia\ffmpeg\qffmpegscreencapture_dxgi.cpp(288): error C2672: 'QScreen::nativeInterface': no matching overloaded function found C:\Users\qt\work\install\include\QtGui\qscreen.h(120): note: could be 'NativeInterface *QScreen::nativeInterface(void) const' C:\Users\qt\work\qt\qtmultimedia\src\plugins\multimedia\ffmpeg\qffmpegscreencapture_dxgi.cpp(288): note: 'QScreen::nativeInterface': invalid template argument for 'NativeInterface', type expected C:\Users\qt\work\qt\qtmultimedia\src\plugins\multimedia\ffmpeg\qffmpegscreencapture_dxgi.cpp(289): error C3536: 'winScreen': cannot be used before it is initialized C:\Users\qt\work\qt\qtmultimedia\src\plugins\multimedia\ffmpeg\qffmpegscreencapture_dxgi.cpp(323): error C2039: 'QWindowsScreen': is not a member of 'QNativeInterface::Private' C:\Users\qt\work\install\include\QtGui\6.7.0\QtGui\qpa/qplatformscreen_p.h(35): note: see declaration of 'QNativeInterface::Private' C:\Users\qt\work\qt\qtmultimedia\src\plugins\multimedia\ffmpeg\qffmpegscreencapture_dxgi.cpp(323): error C2065: 'QWindowsScreen': undeclared identifier C:\Users\qt\work\qt\qtmultimedia\src\plugins\multimedia\ffmpeg\qffmpegscreencapture_dxgi.cpp(323): error C2672: 'QScreen::nativeInterface': no matching overloaded function found C:\Users\qt\work\install\include\QtGui\qscreen.h(120): note: could be 'NativeInterface *QScreen::nativeInterface(void) const' C:\Users\qt\work\qt\qtmultimedia\src\plugins\multimedia\ffmpeg\qffmpegscreencapture_dxgi.cpp(323): note: 'QScreen::nativeInterface': invalid template argument for 'NativeInterface', type expected C:\Users\qt\work\qt\qtmultimedia\src\plugins\multimedia\ffmpeg\qffmpegscreencapture_dxgi.cpp(324): error C3536: 'winScreen': cannot be used before it is initialized C:\Users\qt\work\qt\qtmultimedia\src\plugins\multimedia\ffmpeg\qffmpegscreencapture_dxgi.cpp(327): error C2737: 'handle': const object must be initialized
Details: https://testresults.qt.io/coin/integration/qt/qtmultimedia/tasks/1705084495
Tested changes (refs/builds/qtci/dev/1702115895):
https://codereview.qt-project.org/c/qt/qtmultimedia/+/524129/2 Update dependencies on 'dev' in qt/qtmultimedia
- resulted from
-
QTBUG-113795
Way forward for window and screen native interfaces for KDE
-
- Open
-