Fix build failure after qtgui refactoring

Some QScreen native interface were made public in
706dafe347528dbcbaaf3b4d75fa78bd633d876b, causing build issues in
QtMultimedia.

This patch fixes the issue by replacing the obsolete and private
QNativeInterface::Private::QWindowsScreen with the new and public
QNativeInterface::QWindowsScreen.

Fixes: QTBUG-119909
Task-number: QTBUG-113795
Change-Id: I63ec1eea76068da882044fc740040b3964cac8be
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>